# ansible_role_yara

./: .ansible-lint  .env  .gitlab-ci.yml  README.md  pyproject.toml
.github/workflows/: main.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml
tasks/: main.yml  source.yml
vars/: Debian.yml  RedHat.yml
