[tool.poetry]
name = "ansible_role_yara"
version = "0.1.0"
description = ""
authors = ["neonmei <neonmei@pm.me>"]

[tool.poetry.dependencies]
python = "^3.6"

# Pin ansible version to that currently present on awx
ansible = "^2.9.6"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
selinux = "^0.2.1"
yamllint = "^1.25.0"
ansible-lint = "^4.3.7"
molecule = {extras = ["lint"], version = "^3.1.5"}
molecule-docker = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
